--- a/views/index.mustache
+++ b/views/index.mustache
@@ -1,3 +1,33 @@
 {{> partials/header }}
-{{content}}
+
+<div class="container">
+
+	{{#Local.Current}}
+        <p>
+			{{Title}}<br>
+			{{Desc}}<br>
+			{{Photo}}<br>
+			{{StartTime}}<br>
+			{{EndTime}}<br>
+			{{Presenters}}<br>
+			{{Url}}<br>
+			{{Id}}<br>
+        </p>
+	{{/Local.Current}}
+
+	{{#Local.Next}}
+        <p>
+			{{Title}}<br>
+			{{Desc}}<br>
+			{{Photo}}<br>
+			{{StartTime}}<br>
+			{{EndTime}}<br>
+			{{#Presenters}}<br>{{/Presenters}}
+			{{#Url}}<br>{{/Url}}
+			{{#Id}}<br>{{/Id}}
+        </p>
+	{{/Local.Next}}
+
+</div><!-- /.container -->
+
 {{> partials/footer }}
