--- a/views/partials/header.mustache
+++ b/views/partials/header.mustache
@@ -1,6 +1,11 @@
-<!doctype html>
-<html>
+<!DOCTYPE html>
+<html lang="en">
 <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
+    <title>{{Global.name}}</title>
 
     <!-- bower:css -->
     <link rel='stylesheet' href='/bower_components/bootstrap/dist/css/bootstrap.css' />
@@ -8,7 +13,15 @@
 
     <link href='styles/main.css' rel='stylesheet' type='text/css'>
 
-    <title>Hi</title>
+	<!-- @TODO: Move these into bower -->
+    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
+    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+    <!--[if lt IE 9]>
+	<script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
+	<script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+    <![endif]-->
 
 </head>
 <body>
+
+{{> ../elements/navbar}}
