--- a/views/partials/header.mustache
+++ b/views/partials/header.mustache
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <title>{{Global.name}}</title>
+    <title>{{Globals.LongName}}</title>
 
     <!-- bower:css -->
     <link rel='stylesheet' href='/bower_components/bootstrap/dist/css/bootstrap.css' />
