--- a/views/index.mustache
+++ b/views/index.mustache
@@ -2,7 +2,31 @@
 
 <div class="container">
 
-{{> elements/current_and_next }}
+	{{#Local.Current}}
+        <p>
+			{{Title}}<br>
+			{{Desc}}<br>
+			{{Photo}}<br>
+			{{StartTime}}<br>
+			{{EndTime}}<br>
+			{{Presenters}}<br>
+			{{Url}}<br>
+			{{Id}}<br>
+        </p>
+	{{/Local.Current}}
+
+	{{#Local.Next}}
+        <p>
+			{{Title}}<br>
+			{{Desc}}<br>
+			{{Photo}}<br>
+			{{StartTime}}<br>
+			{{EndTime}}<br>
+			{{#Presenters}}<br>{{/Presenters}}
+			{{#Url}}<br>{{/Url}}
+			{{#Id}}<br>{{/Id}}
+        </p>
+	{{/Local.Next}}
 
 </div><!-- /.container -->
 
