Adds link to show on search page

--- a/views/search.mustache
+++ b/views/search.mustache
@@ -20,11 +20,11 @@
         </h2>
 		{{#Results}}
             <p>
-				{{Title}}
+				<a href="/schedule/shows/{{ShowID}}">{{Title}}</a>
             </p>
 
             <p>
-				{{Description}}
+				{{{Description}}}
             </p>
 		{{/Results}}
 		{{^Results}}
