--- a/views/elements/navbar.tmpl
+++ b/views/elements/navbar.tmpl
@@ -1,26 +1,30 @@
+{{define "navbar"}}
+
 <nav class="navbar navbar-inverse navbar-fixed-top">
     <div class="container">
         <div class="navbar-header">
             <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar"
                     aria-expanded="false" aria-controls="navbar">
-                <span class="sr-only">{{Global.name}}</span>
+                <span class="sr-only">{{.PageContext.ShortName}}</span>
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="#">{{Global.name}}</a>
+            <a class="navbar-brand" href="/">{{.PageContext.LongName}}</a>
         </div>
         <div id="navbar" class="collapse navbar-collapse">
             <ul class="nav navbar-nav navbar-right">
-				{{#Global.pages}}
+				{{range .PageContext.Pages}}
                     <li>
-                        <a class="{{#active}}active{{/active}}" href="{{url}}">
-							{{name}}
+                        <a class="{{if `Active`}}active{{end}}" href="/{{.Url}}">
+							{{.Name}}
                         </a>
                     </li>
-				{{/Global.pages}}
+				{{end}}
             </ul>
         </div>
         <!--/.nav-collapse -->
     </div>
 </nav>
+
+{{end}}
