--- a/views/partials/footer.tmpl
+++ b/views/partials/footer.tmpl
@@ -1,3 +1,5 @@
+{{define "footer"}}
+
 <!-- bower:js -->
 <script src="/bower_components/modernizr/modernizr.js"></script>
 <script src="/bower_components/jquery/dist/jquery.js"></script>
@@ -10,3 +12,5 @@
 
 </body>
 </html>
+
+{{end}}
