Format dates using templates!

--- a/views/index.tmpl
+++ b/views/index.tmpl
@@ -3,8 +3,8 @@
 	{{.Title}}<br>
 	{{.Desc}}<br>
 	{{.Photo}}<br>
-	{{.StartTime}}<br>
-	{{.EndTime}}<br>
+	{{.StartTime.Format "2006 Jan 02"}}<br>
+	{{.EndTime.Format "2006 Jan 02"}}<br>
 	{{.Presenters}}<br>
 	{{.Url}}<br>
 	{{.Id}}<br>
