--- a/views/search.tmpl
+++ b/views/search.tmpl
@@ -1,5 +1,4 @@
-{{template "header" .}}
-
+{{define "content"}}
 {{with .PageData}}
 
 <div class="container">
@@ -43,5 +42,4 @@
 </div><!-- /.container -->
 
 {{end}}
-
-{{template "footer" .}}
+{{end}}
