--- a/views/show.tmpl
+++ b/views/show.tmpl
@@ -1,5 +1,4 @@
-{{template "header" .}}
-
+{{define "content"}}
 {{with .PageData}}
 
 <div class="container">
@@ -21,5 +20,4 @@
 </div><!-- /.container -->
 
 {{end}}
-
-{{template "footer" .}}
+{{end}}
