--- a/views/partials/base.tmpl
+++ b/views/partials/base.tmpl
@@ -11,7 +11,7 @@
     <link rel='stylesheet' href='/bower_components/bootstrap/dist/css/bootstrap.css' />
     <!-- endbower -->
 
-    <link href='styles/main.css' rel='stylesheet' type='text/css'>
+    <link href='/styles/main.css' rel='stylesheet' type='text/css'>
 
 	<!-- @TODO: Move these into bower -->
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
