--- a/views/index.tmpl
+++ b/views/index.tmpl
@@ -1,12 +1,11 @@
 {{define "now_next"}}
 <p>
-	{{.Title}}<br>
+	<a href="{{.Url}}">{{.Title}}</a><br>
 	{{.Desc}}<br>
 	{{.Photo}}<br>
 	{{.StartTime.Format "2006 Jan 02"}}<br>
 	{{.EndTime.Format "2006 Jan 02"}}<br>
 	{{.Presenters}}<br>
-	{{.Url}}<br>
 	{{.Id}}<br>
 </p>
 {{end}}
