Render users bios, go fmts and adds a util function for rendering html

--- a/views/index.tmpl
+++ b/views/index.tmpl
@@ -1,7 +1,7 @@
 {{define "now_next"}}
 <p>
 	{{.Title}}<br>
-	{{.Desc}}<br>
+	{{html .Desc}}<br>
 	{{.Photo}}<br>
 	{{.StartTime.Format "2006 Jan 02"}}<br>
 	{{.EndTime.Format "2006 Jan 02"}}<br>
@@ -12,7 +12,6 @@
 {{end}}
 
 {{define "content"}}
-
 {{with .PageData}}
 
 <div class="container">
@@ -28,5 +27,4 @@
 </div><!-- /.container -->
 
 {{end}}
-
 {{end}}
