--- a/views/search.tmpl
+++ b/views/search.tmpl
@@ -25,7 +25,7 @@
             </p>
 
             <p>
-				{{.Description}}
+				{{html .Description}}
             </p>
 		{{else}}
             <p>
