--- a/views/index.tmpl
+++ b/views/index.tmpl
@@ -1,30 +1,11 @@
-{{define "now_next"}}
-<p>
-	{{.Title}}<br>
-	{{html .Desc}}<br>
-	{{.Photo}}<br>
-	{{.StartTime.Format "2006 Jan 02"}}<br>
-	{{.EndTime.Format "2006 Jan 02"}}<br>
-	{{.Presenters}}<br>
-	{{.Url}}<br>
-	{{.Id}}<br>
-</p>
-{{end}}
-
 {{define "content"}}
-{{with .PageData}}
+	{{with .PageData}}
 
-<div class="container">
+	<div class="container">
 
-	{{if .Current}}
-		{{template "now_next" .Current}}
+		{{template "current_and_next" .}}
+
+	</div><!-- /.container -->
+
 	{{end}}
-
-	{{if .Next}}
-	{{template "now_next" .Next}}
-	{{end}}
-
-</div><!-- /.container -->
-
-{{end}}
 {{end}}
