--- a/views/elements/current_and_next.tmpl
+++ b/views/elements/current_and_next.tmpl
@@ -1,9 +1,11 @@
 {{define "current_and_next"}}
-	{{if .Current}}
-		{{template "current_next" .Current}}
-	{{end}}
-	{{if .Next}}
-		{{template "current_next" .Next}}
+	{{with .CurrentAndNext}}
+		{{if .Current}}
+			{{template "current_next" .Current}}
+		{{end}}
+		{{if .Next}}
+			{{template "current_next" .Next}}
+		{{end}}
 	{{end}}
 {{end}}
 
