added html formatting to fit new css styles.

--- a/views/elements/current_and_next.tmpl
+++ b/views/elements/current_and_next.tmpl
@@ -1,17 +1,28 @@
 {{define "current_and_next"}}
-	{{if .Current}}
-		{{template "current_next" .Current}}
-	{{end}}
-	{{if .Next}}
-		{{template "current_next" .Next}}
-	{{end}}
+	<div class="row">
+		{{if .Current}}
+			<div class="col-xs-4 col-sm-4 now-next-live" style="background-image:url('/images/index-now-next-live-thumb.jpeg');"></div>
+			<div class="col-xs-8 col-sm-4 now-next-now">
+				<h2>Now</h2>
+				{{template "current_next" .Current}}
+			</div>
+
+		{{end}}
+		{{if .Next}}
+			<div class="col-xs-12 col-sm-4 now-next-next">
+			 	<h2 class="mobile-col-left">Next</h2>
+			 	<div class="mobile-col-right">
+					{{template "current_next" .Next}}
+				</div>
+			</div>
+		{{end}}
+	</div>
 {{end}}
 
 {{define "current_next"}}
 
-<p>
-	<a href="{{.Url}}">{{.Title}}</a><br>
-	{{.StartTime.Format "15:04"}} - {{.EndTime.Format "15:04"}}
-</p>
+<h3><a href="{{.Url}}">{{.Title}}</a></h3>
+<h4>{{.StartTime.Format "15:04"}} - {{.EndTime.Format "15:04"}}</h4>
+<p><a class="btn btn-default" href="{{.Url}}" role="button">About the show »</a></p>
 
 {{end}}
