--- a/views/elements/navbar.tmpl
+++ b/views/elements/navbar.tmpl
@@ -1,30 +1,29 @@
 {{define "navbar"}}
 
 <nav class="navbar navbar-inverse navbar-fixed-top">
-    <div class="container">
+      <div class="container">
         <div class="navbar-header">
-            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar"
-                    aria-expanded="false" aria-controls="navbar">
-                <span class="sr-only">{{.PageContext.ShortName}}</span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-            </button>
-            <a class="navbar-brand" href="/">{{.PageContext.LongName}}</a>
+          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+            <span class="sr-only">{{.PageContext.ShortName}}</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <a class="navbar-brand" href="#">
+            <img src="/images/logo.png" height="34" alt="{{.PageContext.LongName}} Logo" >
+          </a>
         </div>
-        <div id="navbar" class="collapse navbar-collapse">
-            <ul class="nav navbar-nav navbar-right">
-				{{range .PageContext.Pages}}
-                    <li>
-                        <a class="{{if `Active`}}active{{end}}" href="/{{.Url}}">
-							{{.Name}}
-                        </a>
-                    </li>
-				{{end}}
-            </ul>
-        </div>
-        <!--/.nav-collapse -->
-    </div>
-</nav>
+
+        <div id="navbar" class="navbar-collapse collapse">
+
+          <form class="navbar-form navbar-right">
+            <div class="form-group">
+                <input type="text" class="form-control" placeholder="Search">
+            </div>
+            <button type="submit" class="btn btn-default" alt="Submit"><span class="glyphicon glyphicon-search" aria-hidden="true"></span></button>
+          </form>
+        </div><!--/.navbar-collapse -->
+      </div>
+    </nav>
 
 {{end}}
