--- a/views/partials/base.tmpl
+++ b/views/partials/base.tmpl
@@ -7,21 +7,16 @@
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
     <title>{{block "title" .}}{{.PageContext.LongName}}{{end}}</title>
 
-    <!-- bower:css -->
-    <link rel='stylesheet' href='/bower_components/bootstrap/dist/css/bootstrap.css' />
-    <!-- endbower -->
+    <link rel="stylesheet" href="css/bootstrap-3.3.7.min.css" type="text/css" />
+    <link rel="stylesheet" href="css/main.scss.css" type="text/css" />
 
-    <link href='/styles/main.css' rel='stylesheet' type='text/css'>
-
-	<!-- @TODO: Move these into bower -->
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
 	<script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
 	<script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
-    <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
-
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway" />
 </head>
 <body>
 
@@ -37,14 +32,10 @@
 
 {{template "footer" .}}
 
-<!-- bower:js -->
-<script src="/bower_components/jquery/dist/jquery.js"></script>
-<script src="/bower_components/bootstrap/dist/js/bootstrap.js"></script>
-<script src="/bower_components/moment/moment.js"></script>
-<script src="/bower_components/jquery-ui/jquery-ui.js"></script>
-<!-- endbower -->
+<script src="js/jquery-3.1.1.min.js"></script>
+<script src="js/bootstrap-3.3.7.min.js"></script>
 
-<script src="/scripts/main.min.js"></script>
+<script src="js/main.js"></script>
 
 </body>
 </html>
