--- a/views/elements/navbar.tmpl
+++ b/views/elements/navbar.tmpl
@@ -9,7 +9,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#">
+          <a class="navbar-brand" href="/">
             <img src="/images/logo.png" height="34" alt="{{.PageContext.LongName}} Logo" >
           </a>
         </div>
