--- a/views/partials/base.tmpl
+++ b/views/partials/base.tmpl
@@ -44,7 +44,7 @@
 <script src="/bower_components/jquery-ui/jquery-ui.js"></script>
 <!-- endbower -->
 
-<script src="scripts/main.min.js"></script>
+<script src="/scripts/main.min.js"></script>
 
 </body>
 </html>
