added the basis for a footer.

--- a/views/partials/footer.tmpl
+++ b/views/partials/footer.tmpl
@@ -1,2 +1,8 @@
 {{define "footer"}}
+	<footer class="container outer footer">
+        	<div class="navbar-left"><a href="#">Disclaimer</a> | <a href="#">MyRadio</a> | <a href="#">Contact</a></div>
+        	<div class="navbar-right">
+				<p>Designed by <a href="#">Computing</a></p>
+          	</div>
+    </footer>
 {{end}}
