--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -5,13 +5,11 @@
 /* Space out content a bit */
 body {
   padding-top: 49px;
-  /* padding-bottom: 20px; */
 
 }
 
 /* Everything but the jumbotron gets side spacing for mobile first views */
 .header,
-.marketing,
 .footer {
   padding-right: 15px;
   padding-left: 15px;
@@ -46,46 +44,39 @@ body {
 	margin-top: -7px;
 }
 
-
-.now-next {
-	background:url('/images/index-now-next-bg.png') center center no-repeat;
+.current-next {
+	background:url('/images/current-next-bg.png') center center no-repeat;
 	background-size:300%;
 	color:white;
 }
-
-.now-next-live {
+.current-next-live {
 	background-repeat: no-repeat;
 	background-size:100%;
 	position: relative;
 	text-align:center;
-
 }
-.now-next-now, .now-next-next{
+.current-next-now, .current-next-next{
 	background: #032e59;
-
 }
-.now-next-next{
+.current-next-next{
  	background:#000088;
 }
-.now-next-live-button {
+.current-next-live-button {
     position: absolute;
     left: 15%;
     right: 15%;
     bottom: 10%;
     opacity:0.9;
 }
-.now-next-live-button-mobile {
+.current-next-live-button-mobile {
     width:100%;
     border-radius:0;
 }
-
 .index-infobar {
 	background:#e1e1e1;
-
 }
 .index-infobar hr {
 	border-color:#032e59;
-
 }
 .index-schedule {
 	background: #032e59;
@@ -94,13 +85,11 @@ body {
 
 .people-content {
 	background:#e1e1e1;
-
 }
 .people-content h1 {
 	color: #032e59;
 	font-size:60px;
 	font-weight:300;
-	
 }
 .people-sidebar {
 	padding: 0 30px;
@@ -119,8 +108,7 @@ body {
 .people-profile {
 	border: #e1e1e1 7px solid;
 	margin:-100px auto 20px auto;
-
-    max-width: 85%;
+  max-width: 85%;
 }
 .people-sidebar .row div {
 	padding:5px;
@@ -131,23 +119,16 @@ body {
 	padding:10px 40px 40px 40px;
 }
 
-
-
 /* Responsive: Portrait tablets and up */
 @media screen and (min-width: 768px) {
 	body {
 		background:url('/images/bg-overlay.png') bottom right no-repeat fixed;
 	}
-	
-  /* Remove the padding we set earlier */
-  .header,
-  .marketing,
+	  /* Remove the padding we set earlier */
+  .header
    {
     padding-right: 0;
     padding-left: 0;
-  }
-  /* Space out the masthead */
-  .header {
     margin-bottom: 30px;
   }
   /* Remove the bottom border on the jumbotron for visual effect */
@@ -155,18 +136,18 @@ body {
     border-bottom: 0;
   }
   
-  .now-next {
-
-	padding: 8em 0;
+  .current-next {
+	  padding: 8em 0;
   }
-  .now-next-live-button-mobile {
+  .current-next-live-button-mobile {
 		display:none;
 	}
-
-  	.container.outer {
-  		max-width:70%;
-  		width:70%;
-  	}
+	
+	
+  .container.outer {
+  	max-width:70%;
+  	width:70%;
+  }
   .container {
     max-width: 730px;
   }
@@ -178,6 +159,7 @@ body {
 	padding:0 0 10px 40px;
   }
 }
+
 .container-narrow > hr {
   margin: 30px 0;
 }
@@ -201,21 +183,18 @@ body {
 }
 
 @media (min-width: 982px) {
-
-  	.container.outer {
-  		max-width: 950px;
-  		width:950px;
+  .container.outer {
+  	max-width: 950px;
+  	width:950px;
   }
 }
+
 @media (min-width: 1280px) {
-
-  	.container.outer {
-  		max-width: 1200px;
-  		width:1200px;
+  .container.outer {
+  	max-width: 1200px;
+  	width:1200px;
   }
 }
-
-
 
 @media screen and (max-width: 767px) {
 	.mobile-hide {
@@ -231,40 +210,36 @@ body {
 	body {
 		background:#02213f;
 	}
-	.now-next h2 {
+	.current-next h2 {
 		font-size: 25px;
 	}
-	.now-next h3 {
+	.current-next h3 {
 		font-size: 20px;
 		margin-top:5px;
 	}
-	.now-next h4 {
+	.current-next h4 {
 		font-size: 16px;
 		margin-top:5px;
 	}
-	.now-next {
+	.current-next {
 		padding-top: 6em;
 		padding-bottom: 4em;
 	}
-	.now-next-live-button {
+	.current-next-live-button {
 		display:none;
 	}
-	.now-next-next .mobile-col-left {
+	.current-next-next .mobile-col-left {
 		width: 33.333333333%;
 		float:left;
 	}		
-	.now-next-next .mobile-col-right {
+	.current-next-next .mobile-col-right {
 		width: 66.66666666%;
 		float:right;
-    	margin-top: 20px;
-    	padding-right: 15px;
-    	padding-left: 15px;
+    margin-top: 20px;
+    padding-right: 15px;
+    padding-left: 15px;
 	}	
 	.index-banner {
 		display:none;
 	}
 }
-
-
-
-
