Switched to current-next instead of now-next

--- a/views/index.tmpl
+++ b/views/index.tmpl
@@ -1,7 +1,7 @@
 {{define "content"}}
 	{{with .PageData}}
 
-	<div class="container outer now-next">
+	<div class="container outer current-next">
     	<div class="container">
 
 			{{template "current_and_next" .}}
