--- a/views/people.tmpl
+++ b/views/people.tmpl
@@ -7,8 +7,6 @@
 
 				{{template "current_and_next" .}}
 
-					<!-- BANNER TEMPLATE GOES HERE -->
-
 			</div><!-- /.container -->
 		</div><!-- /outer containter -->
 
@@ -18,16 +16,16 @@
 		  <div class="row">
 	        <div class="col-lg-4 people-sidebar">
 	        	<img class="img-circle img-responsive people-profile" src="
+					      
+					      {{if .ProfilePicture.Url}}
+									https://ury.org.uk{{.ProfilePicture.Url}}
+								{{else}}
+									/images/people-profile.jpg
+								{{end}}
 
-		        	{{if .ProfilePicture.Url}}
-						https://ury.org.uk{{.ProfilePicture.Url}}
-					{{else}}
-						/images/people-profile.jpg
-					{{end}}
-
-				" alt="Photo of 
-					{{.Name}}
-				">
+							" alt="Photo of 
+								{{.Name}}
+							">
 	          	<h1 class="mobile-only">
 	          		{{.Name}}
 	          	</h1>
@@ -35,12 +33,12 @@
 	          	<h2>Credit</h2>
 	          <div class="row">
 	          	{{range .ShowCredits}}
-					<div class="col-xs-4">
+								<div class="col-xs-4">
 		          		<a href="{{.MicroSiteLink.URL}}" title="View the {{.Title}} webpage.">
-		          			<img class="img-responsive" src="/images/show-1.png" alt="{{.Title}} logo." />
+		          			<img class="img-responsive" src="/images/show-logo.png" alt="{{.Title}} logo." />
 		          		</a>
 	          		</div>
-				{{end}}
+							{{end}}
 	          </div>
 	        </div>
 
@@ -72,8 +70,6 @@
 
 						{{end}}
 					</ul>
-
-
 
 			  </div>
 	        </div>
