changed css from now-next to current-next.

--- a/views/people.tmpl
+++ b/views/people.tmpl
@@ -2,7 +2,7 @@
 
 	{{with .PageData}}
 
-		<div class="container outer header-large now-next">
+		<div class="container outer header-large current-next">
 		    <div class="container mobile-hide">
 
 				{{template "current_and_next" .}}
