--- a/views/elements/navbar.tmpl
+++ b/views/elements/navbar.tmpl
@@ -16,9 +16,9 @@
 
         <div id="navbar" class="navbar-collapse collapse">
 
-          <form class="navbar-form navbar-right">
+          <form action="/search/" class="navbar-form navbar-right">
             <div class="form-group">
-                <input type="text" class="form-control" placeholder="Search">
+                <input type="text" name="term" class="form-control" placeholder="Search">
             </div>
             <button type="submit" class="btn btn-default" alt="Submit"><span class="glyphicon glyphicon-search" aria-hidden="true"></span></button>
           </form>
