--- a/views/elements/current_and_next.tmpl
+++ b/views/elements/current_and_next.tmpl
@@ -5,14 +5,14 @@
 			{{if .Current}}
 				<div class="col-xs-4 col-sm-4 current-next-live" style="background-image:url('/images/show-current.png');">
 				<a href="https://ury.org.uk/listen" class="btn btn-lg btn-primary current-next-live-button" title="Listen Live" onclick="window.open('http://ury.org.uk/live', 'radioplayer', 'height=665,width=380'); return false;">Listen Live</a></div>
-				<div class="col-xs-8 col-sm-4 current-next-now">
+				<div id="#current-next-now" class="col-xs-8 col-sm-4 current-next-now">
 					<h2>Now</h2>
 					{{template "current_next" .Current}}
 				</div>
 
 			{{end}}
 			{{if .Next}}
-				<div class="col-xs-12 col-sm-4 current-next-next">
+				<div id="#current-next-next" class="col-xs-12 col-sm-4 current-next-next">
 				 	<h2 class="mobile-col-left">Next</h2>
 				 	<div class="mobile-col-right">
 						{{template "current_next" .Next}}
