--- a/views/partials/base.tmpl
+++ b/views/partials/base.tmpl
@@ -7,8 +7,8 @@
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
     <title>{{block "title" .}}{{.PageContext.LongName}}{{end}}</title>
 
-    <link rel="stylesheet" href="css/bootstrap-3.3.7.min.css" type="text/css" />
-    <link rel="stylesheet" href="css/main.scss.css" type="text/css" />
+    <link rel="stylesheet" href="/css/bootstrap-3.3.7.min.css" type="text/css" />
+    <link rel="stylesheet" href="/css/main.scss.css" type="text/css" />
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -32,10 +32,10 @@
 
 {{template "footer" .}}
 
-<script src="js/jquery-3.1.1.min.js"></script>
-<script src="js/bootstrap-3.3.7.min.js"></script>
+<script src="/js/jquery-3.1.1.min.js"></script>
+<script src="/js/bootstrap-3.3.7.min.js"></script>
 
-<script src="js/main.js"></script>
+<script src="/js/main.js"></script>
 
 </body>
 </html>
