--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -139,17 +139,31 @@ body {
   .current-next {
 	  padding: 8em 0;
   }
+  .current-next-live {
+  	float:left;
+  }
+  .current-next .desktop-right {
+  	width: 545px;
+    float: right;
+    padding-right:15px;
+  }
+  .current-next-live,  .current-next-live img{
+  	width:200px;
+  	height:200px;
+  }
+  .current-next-now, .current-next-next {
+  	height:200px;
+  }
   .current-next-live-button-mobile {
 		display:none;
 	}
 	
 	
   .container.outer {
-  	max-width:70%;
-  	width:70%;
+  	width:100%;
   }
   .container {
-    max-width: 730px;
+    width: 730px;
   }
   .mobile-only {
   	display:none;
@@ -174,25 +188,21 @@ body {
   font-size: 21px;
 }
 
-/* Supporting marketing content */
-.marketing {
-  margin: 40px 0;
-}
-.marketing p + h4 {
-  margin-top: 28px;
-}
-
 @media (min-width: 982px) {
-  .container.outer {
-  	max-width: 950px;
+  .container {
   	width:950px;
+  }
+  .current-next .desktop-right {
+  	width: 765px;
   }
 }
 
 @media (min-width: 1280px) {
-  .container.outer {
-  	max-width: 1200px;
+  .container {
   	width:1200px;
+  }
+  .current-next .desktop-right {
+  	width: 1015px;
   }
 }
 
@@ -210,6 +220,12 @@ body {
 	body {
 		background:#02213f;
 	}
+	.container.outer {
+		width:100%;
+	}
+	.container {
+		width: 90%;
+	}
 	.current-next h2 {
 		font-size: 25px;
 	}
@@ -225,19 +241,23 @@ body {
 		padding-top: 6em;
 		padding-bottom: 4em;
 	}
-	.current-next-live-button {
-		display:none;
+	.current-next-live {
+		padding:0;
+	}
+	.current-next-live img{
+		max-width: 100%;
+    max-height: 100%;
 	}
 	.current-next-next .mobile-col-left {
 		width: 33.333333333%;
+		padding: 30px 15px;
+		margin:0;
 		float:left;
 	}		
-	.current-next-next .mobile-col-right {
+	.mobile-col-right {
 		width: 66.66666666%;
 		float:right;
-    margin-top: 20px;
-    padding-right: 15px;
-    padding-left: 15px;
+	  padding: 30px 15px;
 	}	
 	.index-banner {
 		display:none;
