--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -3,24 +3,27 @@
 @import "elements/elements";
 
 /* Space out content a bit */
+
 body {
   padding-top: 49px;
-
 }
 
 /* Everything but the jumbotron gets side spacing for mobile first views */
-.header,
-.footer {
+
+.header, .footer {
   padding-right: 15px;
   padding-left: 15px;
 }
 
 /* Custom page header */
+
 .header {
   padding-bottom: 20px;
   border-bottom: 1px solid #e5e5e5;
 }
+
 /* Make the masthead heading the same height as the navigation */
+
 .header h3 {
   margin-top: 0;
   margin-bottom: 0;
@@ -28,105 +31,102 @@ body {
 }
 
 /* Custom page footer */
+
 .footer {
   padding: 20px 30px;
-  font-size:18px;
+  font-size: 18px;
   color: #777;
   border-top: 3px solid #ddd;
-  background:#e1e1e1;
+  background: #e1e1e1;
 }
-
-
 .navbar {
-	background: #032e59;
+  background: #032e59;
 }
 .navbar img {
-	margin-top: -7px;
+  margin-top: -7px;
 }
-
 .current-next {
-	background:url('/images/current-next-bg.png') center center no-repeat;
-	background-size:300%;
-	color:white;
+  background: url('/images/current-next-bg.png') center center no-repeat;
+  background-size: 300%;
+  color: white;
 }
 .current-next-live {
-	background-repeat: no-repeat;
-	background-size:100%;
-	position: relative;
-	text-align:center;
+  background-repeat: no-repeat;
+  background-size: 100%;
+  position: relative;
+  text-align: center;
 }
-.current-next-now, .current-next-next{
-	background: #032e59;
+.current-next-now, .current-next-next {
+  background: #032e59;
 }
-.current-next-next{
- 	background:#000088;
+.current-next-next {
+  background: #000088;
 }
 .current-next-live-button {
-    position: absolute;
-    left: 15%;
-    right: 15%;
-    bottom: 10%;
-    opacity:0.9;
+  position: absolute;
+  left: 15%;
+  right: 15%;
+  bottom: 10%;
+  opacity: 0.9;
 }
 .current-next-live-button-mobile {
-    width:100%;
-    border-radius:0;
+  width: 100%;
+  border-radius: 0;
 }
 .index-infobar {
-	background:#e1e1e1;
+  background: #e1e1e1;
 }
 .index-infobar hr {
-	border-color:#032e59;
+  border-color: #032e59;
 }
 .index-schedule {
-	background: #032e59;
-	color: #fff;
+  background: #032e59;
+  color: #fff;
 }
-
 .people-content {
-	background:#e1e1e1;
+  background: #e1e1e1;
 }
 .people-content h1 {
-	color: #032e59;
-	font-size:60px;
-	font-weight:300;
+  color: #032e59;
+  font-size: 60px;
+  font-weight: 300;
 }
 .people-sidebar {
-	padding: 0 30px;
-	color: #032e59;
-	text-align:center;
+  padding: 0 30px;
+  color: #032e59;
+  text-align: center;
 }
 .people-sidebar h3 {
-	font-weight:300;
-	display:inline-block;
-	padding: 15px 10px;
-	border-bottom: #d6d6d6 2px  solid;
+  font-weight: 300;
+  display: inline-block;
+  padding: 15px 10px;
+  border-bottom: #d6d6d6 2px solid;
 }
 .people-sidebar h3:first-of-type {
-	border-right: #d6d6d6 2px  solid;
-} 
+  border-right: #d6d6d6 2px solid;
+}
 .people-profile {
-	border: #e1e1e1 7px solid;
-	margin:-100px auto 20px auto;
+  border: #e1e1e1 7px solid;
+  margin: -100px auto 20px auto;
   max-width: 85%;
 }
 .people-sidebar .row div {
-	padding:5px;
+  padding: 5px;
 }
 .people-bio {
-	background: #032e59;
-	color: #fff;
-	padding:10px 40px 40px 40px;
+  background: #032e59;
+  color: #fff;
+  padding: 10px 40px 40px 40px;
 }
 
 /* Responsive: Portrait tablets and up */
+
 @media screen and (min-width: 768px) {
-	body {
-		background:url('/images/bg-overlay.png') bottom right no-repeat fixed;
-	}
-	  /* Remove the padding we set earlier */
-  .header
-   {
+  body {
+    background: url('/images/bg-overlay.png') bottom right no-repeat fixed;
+  }
+  /* Remove the padding we set earlier */
+  .header {
     padding-right: 0;
     padding-left: 0;
     margin-bottom: 30px;
@@ -135,50 +135,46 @@ body {
   .jumbotron {
     border-bottom: 0;
   }
-  
   .current-next {
-	  padding: 8em 0;
+    padding: 8em 0;
   }
   .current-next-live {
-  	float:left;
+    float: left;
   }
   .current-next .desktop-right {
-  	width: 545px;
+    width: 545px;
     float: right;
-    padding-right:15px;
+    padding-right: 15px;
   }
-  .current-next-live,  .current-next-live img{
-  	width:200px;
-  	height:200px;
+  .current-next-live, .current-next-live img {
+    width: 200px;
+    height: 200px;
   }
   .current-next-now, .current-next-next {
-  	height:200px;
+    height: 200px;
   }
   .current-next-live-button-mobile {
-		display:none;
-	}
-	
-	
+    display: none;
+  }
   .container.outer {
-  	width:100%;
+    width: 100%;
   }
   .container {
     width: 730px;
   }
   .mobile-only {
-  	display:none;
+    display: none;
   }
-  
   .people-content h1 {
-	padding:0 0 10px 40px;
+    padding: 0 0 10px 40px;
   }
 }
-
-.container-narrow > hr {
+.container-narrow>hr {
   margin: 30px 0;
 }
 
 /* Main marketing message and sign up button */
+
 .jumbotron {
   text-align: center;
   border-bottom: 1px solid #e5e5e5;
@@ -187,79 +183,76 @@ body {
   padding: 14px 24px;
   font-size: 21px;
 }
-
 @media (min-width: 982px) {
   .container {
-  	width:950px;
+    width: 950px;
   }
   .current-next .desktop-right {
-  	width: 765px;
+    width: 765px;
   }
 }
-
 @media (min-width: 1280px) {
   .container {
-  	width:1200px;
+    width: 1200px;
   }
   .current-next .desktop-right {
-  	width: 1015px;
+    width: 1015px;
   }
 }
-
 @media screen and (max-width: 767px) {
-	.mobile-hide {
-  		display:none;
- 	}
- 	.header-large {
- 		height:400px;
- 	}
- 	.people-profile {
- 		margin-top: -320px;
- 		margin-bottom: 30px;
- 	}
-	body {
-		background:#02213f;
-	}
-	.container.outer {
-		width:100%;
-	}
-	.container {
-		width: 90%;
-	}
-	.current-next h2 {
-		font-size: 25px;
-	}
-	.current-next h3 {
-		font-size: 20px;
-		margin-top:5px;
-	}
-	.current-next h4 {
-		font-size: 16px;
-		margin-top:5px;
-	}
-	.current-next {
-		padding-top: 6em;
-		padding-bottom: 4em;
-	}
-	.current-next-live {
-		padding:0;
-	}
-	.current-next-live img{
-		max-width: 100%;
+  .mobile-hide {
+    display: none;
+  }
+  .header-large {
+    height: 400px;
+  }
+  .people-profile {
+    margin-top: -320px;
+    margin-bottom: 30px;
+  }
+  body {
+    background: #02213f;
+  }
+  .container.outer {
+    width: 100%;
+  }
+  .container {
+    width: 90%;
+  }
+  .current-next h2 {
+    font-size: 25px;
+  }
+  .current-next h3 {
+    font-size: 20px;
+    margin-top: 5px;
+  }
+  .current-next h4 {
+    font-size: 16px;
+    margin-top: 5px;
+  }
+  .current-next {
+    padding-top: 6em;
+    padding-bottom: 4em;
+  }
+  .current-next-live {
+    padding: 0;
+  }
+  .current-next-live img {
+    max-width: 100%;
     max-height: 100%;
-	}
-	.current-next-next .mobile-col-left {
-		width: 33.333333333%;
-		padding: 30px 15px;
-		margin:0;
-		float:left;
-	}		
-	.mobile-col-right {
-		width: 66.66666666%;
-		float:right;
-	  padding: 30px 15px;
-	}	
-	.index-banner {
-		display:none;
-	}
+  }
+  .current-next-next .mobile-col-left {
+    width: 33.333333333%;
+    padding: 30px 15px;
+    margin: 0;
+    float: left;
+  }
+  .mobile-col-right {
+    width: 66.66666666%;
+    float: right;
+    padding: 30px 15px;
+  }
+  .index-banner {
+    display: none;
+  }
 }
