--- a/views/elements/current_and_next.tmpl
+++ b/views/elements/current_and_next.tmpl
@@ -1,9 +1,9 @@
 {{define "current_and_next"}}
 	{{with .CurrentAndNext}}
-		<div class="current-and-next">
+		<div class="current-and-next row">
 			{{if .Current}}
-				<a href="https://ury.org.uk/listen" class="btn btn-lg btn-primary mobile-hide" title="Listen Live" onclick="window.open('http://ury.org.uk/live', 'radioplayer', 'height=665,width=380'); return false;">Listen Live</a>
-				<img id="current-next-live" src="/images/show-current.png" alt="" />
+				<!-- a href="https://ury.org.uk/listen" class="btn btn-lg btn-primary mobile-hide" title="Listen Live" onclick="window.open('http://ury.org.uk/live', 'radioplayer', 'height=665,width=380'); return false;">Listen Live</a-->
+				<img class="current-and-next-img" src="/images/show-current.png" alt="" />
 				<div class="current-and-next-now">
 					<h2>Now</h2>
 					{{template "current_next" .Current}}
