--- a/src/styles/elements/_currentAndNext.scss
+++ b/src/styles/elements/_currentAndNext.scss
@@ -1,20 +1,33 @@
 $current-next-now-bg:#003367;
-$current-next-next-bg:rgba(0,51,103,0.75);
+$current-next-next-bg:rgba(0,51,103,0.85);
 
+.current-next {
+  background: url('/images/current-next-bg.png') center center no-repeat;
+  background-size: cover;
+  color: white;
+  padding:10em 0;
+}
 .current-and-next {
   display: flex;
-  flex-direction: row;
-  height:12em;
+  flex-flow: row wrap;
+  min-height:12em;
   color:white;
   margin: 0 -15px; //not sure why this is needed should probably be looked into
+  
   .current-and-next-img {
-    height: 12em;
-    width: auto;
+      max-height: 12em;
+      max-width: 12em;
+      width: auto;
+    img {
+      height:100%;
+      width:auto;
+    }
   }
-  div {
-    flex-grow: 1;
-    flex-basis: 0; 
-    
+  .current-and-next-now, .current-and-next-next {
+    flex-grow: 1; 
+    padding: 0.5em 2em;
+    min-width: 250px;
+    flex-wrap: wrap;
   }
   .current-and-next-now {
     background: $current-next-now-bg;
@@ -23,6 +36,23 @@ $current-next-next-bg:rgba(0,51,103,0.75);
     background: $current-next-next-bg;
   }
 }
+@media screen and (max-width: 767px) {
+  .current-and-next-btn-mobile {
+    flex-basis: 100%;
+    order:5;
+    border-radius: 0;
+  }
+}
+@media screen and (min-width: 768px) {
+  .current-and-next-btn {
+    position: relative;
+    left: 15%;
+    right: 15%;
+    bottom: 3em;
+    opacity: 0.9;
+  }
+}
+  
 
 
 
