--- a/views/elements/navbar.tmpl
+++ b/views/elements/navbar.tmpl
@@ -15,7 +15,13 @@
         </div>
 
         <div id="navbar" class="navbar-collapse collapse">
-
+          <ul class="nav navbar-nav">
+            <li> <a href="#">Schedule</a> </li>
+            <li> <a href="#">Shows</a> </li>
+            <li> <a href="#">URY Player</a> </li>
+            <li> <a href="#">About Us</a> </li>
+            <li> <a href="#">Get Involved</a> </li>
+          </ul>
           <form action="/search/" class="navbar-form navbar-right">
             <div class="form-group">
                 <input type="text" name="term" class="form-control" placeholder="Search">
