--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -2,6 +2,8 @@
 @import "partials/partials";
 @import "elements/elements";
 
+$primary-color: rgba(0, 51, 103, 1);
+
 /* Space out content a bit */
 
 body {
@@ -40,56 +42,96 @@ body {
   background: #e1e1e1;
 }
 .navbar {
-  background: #032e59;
+  background: $primary-color;
 }
 .navbar img {
   margin-top: -7px;
 }
 .index-infobar {
   background: #e1e1e1;
+  padding: 3em 0;
 }
 .index-infobar hr {
-  border-color: #032e59;
+  border-color: $primary-color;
 }
 .index-schedule {
-  background: #032e59;
+  background: $primary-color;
   color: #fff;
 }
-.people-content {
+.page1-content {
   background: #e1e1e1;
 }
-.people-content h1 {
-  color: #032e59;
-  font-size: 60px;
+.page1-title {
+  color: $primary-color;
+  font-size: 40px;
   font-weight: 300;
 }
-.people-sidebar {
+.page1-subtitle {
+  color: $primary-color;
+  font-weight: 300;
+}
+.page1-sidebar {
   padding: 0 30px;
   color: #032e59;
   text-align: center;
 }
-.people-sidebar h3 {
+.page1-sidebar h3 {
   font-weight: 300;
+  font-size: 18px;
   display: inline-block;
   padding: 15px 10px;
   border-bottom: #d6d6d6 2px solid;
 }
-.people-sidebar h3:first-of-type {
+.page1-sidebar h3:first-of-type {
   border-right: #d6d6d6 2px solid;
 }
-.people-profile {
+.page1-image {
   border: #e1e1e1 7px solid;
   margin: -100px auto 20px auto;
   max-width: 85%;
 }
-.people-sidebar .row div {
+.page1-sidebar .row div {
   padding: 5px;
 }
-.people-bio {
-  background: #032e59;
-  color: #fff;
-  padding: 10px 40px 40px 40px;
+.page1-bio {
+  .page1-title {
+    padding: 0 0 10px 40px;
+  }
+	.page1-bio-box {
+  	background: #032e59;
+  	color: #fff;
+  	padding: 10px 40px 40px 40px;
+  }
 }
+.page1-credits-people {
+	background-color: $primary-color;
+	color: white;
+}
+	.page404 {
+	 text-align:center;
+	 margin: 0 auto;
+	}
+	.page404 h1 {
+		font-size:200px;
+		padding-top: 25vw;
+		padding-bottom: 25vw;
+	}
+	.page404 .spinner {
+		display:inline-block;
+		width:160px;
+		height:160px;
+		font-size:50px;
+		text-align:center;
+		-webkit-animation:spin 4s linear infinite;
+    -moz-animation:spin 4s linear infinite;
+    animation:spin 4s linear infinite;
+    background: url("/images/URYrecord.png") center center;
+    background-size: contain;
+	}
+
+@-moz-keyframes spin { 100% { -moz-transform: rotate(360deg); } }
+@-webkit-keyframes spin { 100% { -webkit-transform: rotate(360deg); } }
+@keyframes spin { 100% { -webkit-transform: rotate(360deg); transform:rotate(360deg); } }
 
 /* Responsive: Portrait tablets and up */
 
@@ -115,9 +157,6 @@ body {
   }
   .mobile-only {
     display: none;
-  }
-  .people-content h1 {
-    padding: 0 0 10px 40px;
   }
 }
 .container-narrow>hr {
@@ -151,7 +190,7 @@ body {
   .header-large {
     height: 400px;
   }
-  .people-profile {
+  .page1-profile {
     margin-top: -320px;
     margin-bottom: 30px;
   }
