--- a/views/404.tmpl
+++ b/views/404.tmpl
@@ -1,3 +1,10 @@
 {{define "content"}}
-404: Not Found
+<div class="container outer page404">
+	<div class="container">
+		<div class="">
+			<h1>4 <div class="spinner"></div> 4</h1>
+			<h2>Looks like we couldn't find that page. Oops!</h2>
+		</div>
+	</div>
+</div>
 {{end}}
