--- a/views/partials/footer.tmpl
+++ b/views/partials/footer.tmpl
@@ -2,7 +2,7 @@
 	<footer class="container outer footer">
         	<div class="navbar-left"><a href="#">Disclaimer</a> | <a href="#">MyRadio</a> | <a href="#">Contact</a></div>
         	<div class="navbar-right">
-				<p>Copyright © 1967-(Insert Current Year Here) University Radio York. Designed by the <a href="mailto:webmaster@ury.org.uk" title="Click to email the Computing team.">URY Computing Team</a></p>
+				<p>Copyright © 1967-2017 University Radio York. Designed by the <a href="mailto:webmaster@ury.org.uk" title="Click to email the Computing team.">URY Computing Team</a></p>
           	</div>
     </footer>
 {{end}}
