--- a/views/show.tmpl
+++ b/views/show.tmpl
@@ -1,6 +1,59 @@
 {{define "content"}}
 {{with .PageData}}
 
+	<div class="container outer header-large current-next">
+		<div class="container mobile-hide">
+		</div>
+	</div>
+	
+	<div class="container outer page1-content">
+		<div class="container">
+		  <div class="row">
+	        <div class="col-xs-12 col-sm-4 page1-sidebar">
+	        	<img class="img-responsive page1-image" src="
+					      
+					      
+									/images/show-current.png
+								
+
+							" alt="
+								{{.Show.Title}} Logo
+							">
+	          	<h1 class="mobile-only">
+	          		{{.Show.Title}}
+	          	</h1>
+	          	<h3>Seasons: 10</h3><h3>Shows: 10</h3>
+	        </div>
+
+	        <div class="col-xs-12 col-sm-8">
+	          <h1 class="mobile-hide page1-title">
+	        	{{.Show.Title}}
+	          </h1>
+	          <hr>
+	          <!-- <div class="page1-bio-box">  Do we want the bio in a blue box? -->
+				  		<h2 class="page1-subtitle">Description</h2>
+				  		<p>
+								{{html .Show.Description}}
+							</p>
+
+			  		<!-- </div> -->
+	        </div>
+
+	      </div>
+	      <hr>
+	    </div>
+	  </div> <!-- /outer containter -->
+	  <div class="container outer page1-credits-people">
+	  	{{range .Show.Credits}}
+				<a href="/people/{{.User.Memberid}}/">{{.User.Fname}} {{.User.Sname}}</a> <br>
+			{{end}}
+
+    </div> <!-- /outer containter -->
+
+
+
+
+
 <div class="container">
 
 	<h1>
@@ -33,6 +86,13 @@
 	</ul>
 
 </div><!-- /.container -->
+
+
+
+
+
+
+
 
 {{end}}
 {{end}}
